# Plasma

./: CMakeLists.txt  README.md  a.out  diamond.cpp  main.cpp  plasma.h
include/: plasma.h
src/: diamond.cpp  diamond_step.cpp  main.cpp  square.cpp
